--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script>
-      (function () {
-        const fjs = document.getElementsByTagName('script')[0];
-        const js = document.createElement('script');
-        js.src = `./index.js?t=${Date.now()}`;
-        js.type = 'module';
-
-        fjs.parentNode.insertBefore(js, fjs);
-      })();
-    </script>
+    <title>My Fans</title>
+    <script src="./index.js"></script>
   </head>
   <body></body>
 </html>
