--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Fans</title>
-    <script src="./index.js"></script>
+    <script
+      src="https://www.google.com/recaptcha/api.js?onload=init&render=explicit"
+      async
+      defer
+    ></script>
+    <style>
+      html {
+        height: 100vh;
+      }
+
+      body {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script src="./index.js"></script>
+  </body>
 </html>
